2012-09-19  Dirk Pranke  <dpranke@chromium.org>

        nrwt: print unexpected results using new TestExpectations syntax
        https://bugs.webkit.org/show_bug.cgi?id=97159

        Unreviewed, build fix.

        Change new-run-webkit-tests to print out failures using the new
        syntax when there are unexpected results, e.g.:

        52 tests ran as expected, 19 didn't:


        Regressions: Unexpected failures : (2)
          failures/flaky/text.html [ Failure ]
          failures/unexpected/text-image-checksum.html [ Failure ]

        and so forth

        * Scripts/webkitpy/layout_tests/views/printing.py:
        (Printer._print_unexpected_results):

2012-09-19  Dirk Pranke  <dpranke@chromium.org>

        update flakiness dashboard after cutover to new test expectations syntax
        https://bugs.webkit.org/show_bug.cgi?id=97152

        Unreviewed, build fix.

        Handle (??) the new Bug notations as well. Hopefully we don't
        still need the old ones.

        * TestResultServer/static-dashboards/flakiness_dashboard.js:
        (filterBugs):
        (htmlForBugs):
        * TestResultServer/static-dashboards/flakiness_dashboard_unittests.js:

2012-09-19  Dirk Pranke  <dpranke@chromium.org>

        update flakiness dashboard after cutover to new test expectations syntax
        https://bugs.webkit.org/show_bug.cgi?id=97152

        Reviewed by Ryosuke Niwa.

        This change clones the TestExpectation parsing state machine
        from python into javascript.

        * TestResultServer/static-dashboards/flakiness_dashboard.js:
        (parsedExpectations.lines.forEach):
        (parsedExpectations):
        * TestResultServer/static-dashboards/flakiness_dashboard_unittests.js:

2012-09-19  Dana Jansens  <danakj@chromium.org>

        Add backer@chromium.org as contributor
        https://bugs.webkit.org/show_bug.cgi?id=97150

        * Scripts/webkitpy/common/config/committers.py:

2012-09-19  Dirk Pranke  <dpranke@chromium.org>
