@@ -1,5 +1,15 @@
 2012-09-19  Dirk Pranke  <dpranke@chromium.org>
 
+        Fix regex groups for bug matching in flakiness dashboard.
+        https://bugs.webkit.org/show_bug.cgi?id=97152
+
+        Unreviewed, build fix.
+
+        * TestResultServer/static-dashboards/flakiness_dashboard.js:
+        (htmlForBugs):
+
+2012-09-19  Dirk Pranke  <dpranke@chromium.org>
+
         nrwt: print unexpected results using new TestExpectations syntax
         https://bugs.webkit.org/show_bug.cgi?id=97159
 
